--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -14,6 +14,8 @@
         <file>views/ListDelegate.qml</file>
         <file>assets/clip.svg</file>
         <file>views/FloatingVideo.qml</file>
+        <file>views/settings/SettingsDialog.qml</file>
+        <file>views/youtube/YouTubeView.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file>assets/tag.svg</file>
